[gd_scene load_steps=8 format=3 uid="uid://dk1tqo8oaj5rs"]

[ext_resource type="Texture2D" uid="uid://drh0rdyyftb67" path="res://assets/icon.svg" id="1_8g5rm"]
[ext_resource type="Script" path="res://scenes/ui.gd" id="1_egu5k"]
[ext_resource type="Texture2D" uid="uid://b6y726iqg36x6" path="res://assets/heart.png" id="2_3c3rv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ouwo"]
border_color = Color(0.8, 0, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eux04"]

[sub_resource type="Theme" id="Theme_fc8iy"]
Button/styles/hover = SubResource("StyleBoxFlat_2ouwo")
Button/styles/normal = SubResource("StyleBoxFlat_eux04")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yv4c"]
bg_color = Color(0.651033, 0.617634, 7.70092e-07, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.489
anchor_right = 0.5
anchor_bottom = 0.489
offset_left = -320.0
offset_top = -176.04
offset_right = 320.0
offset_bottom = 183.96
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_egu5k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 320.0
offset_top = 329.0
offset_right = 712.0
offset_bottom = 457.0
scale = Vector2(0.15, 0.15)
metadata/_edit_group_ = true

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fc8iy")
texture_normal = ExtResource("1_8g5rm")
texture_pressed = ExtResource("1_8g5rm")
texture_hover = ExtResource("2_3c3rv")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_8g5rm")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_8g5rm")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.894
anchor_right = 0.187
anchor_bottom = 0.992
offset_left = 8.0
offset_top = 6.15997
offset_right = 0.319992
offset_bottom = -10.12

[node name="MoneyIcon" type="TextureRect" parent="HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_8g5rm")
expand_mode = 2

[node name="MoneyLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1000"

[node name="SkeletonIcon" type="TextureRect" parent="HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_8g5rm")
expand_mode = 2

[node name="SkeletonLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.894
anchor_right = 0.975
anchor_bottom = 0.989
offset_left = 32.0
offset_top = 7.16
offset_right = 10.0
offset_bottom = -5.04001
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer3"]
layout_mode = 2
texture = ExtResource("1_8g5rm")
expand_mode = 2

[node name="EnergyAmount" type="ProgressBar" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 10
theme_override_styles/fill = SubResource("StyleBoxFlat_3yv4c")
value = 100.0

[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
